hphp/hack/test/typecheck/inst_meth9.php.exp
File "inst_meth9.php", line 17, characters 29-32:
You cannot use this method with inst_meth (whether you are in the same class or not). (Typing[4079])
File "inst_meth9.php", line 13, characters 20-21:
It is declared as private here
